#153 Fix overflow hidden in card content for docs pages.

--- a/docs/scss/_docs-display-component.scss
+++ b/docs/scss/_docs-display-component.scss
@@ -6,5 +6,9 @@
     border-bottom-right-radius: 0;
     padding-bottom: 8px;
     border-color: #ccc;
- 
+
+    .fd-card__content{
+        overflow: visible;
+    }
+
 }
